Made minor style changes to the Development Portfolio. Began work on re-styling the expanded image light box in the album gallery. Removed the "Contact Me" page and added the links to the navbar instead.

--- a/ReedHampton/Views/DevelopmentProjects/Portfolio.cshtml
+++ b/ReedHampton/Views/DevelopmentProjects/Portfolio.cshtml
@@ -163,7 +163,7 @@
 
                             <div style="position:absolute; top:15px; left:575px; max-width:450px">
                                 <h1 style="font-family:Garamond; font-size:50px; color:#f5eee1;">@project_ShortNames[i]</h1>
-                                <h3 style="font-family:Garamond; font-size:24px; color:#f5eee1;">@project_shortDescriptions[i]</h3>
+                                <h3 style="padding-top:10px; font-family:Garamond; font-size:24px; color:#f5eee1;">@project_shortDescriptions[i]</h3>
                             </div>
                         </div>
 
