--- a/ReedHampton/Views/Shared/_Layout.cshtml
+++ b/ReedHampton/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 
 <style>
     #ContactMe {
-        margin-left: 575px;
+        margin-left: 400px;
     }
 </style>
 <html>
@@ -30,11 +30,43 @@
                     <li>@Html.ActionLink("Development", "Portfolio", "DevelopmentProjects")</li>
                     <li>@Html.ActionLink("Documents", "DocumentPortfolio", "ProfessionalDocuments")</li>
                     <li>@Html.ActionLink("Albums", "AlbumGallery", "Albums")</li>
-                    <li id="ContactMe">@Html.ActionLink("Contact Me", "Index", "ContactInformation")</li>
+
+
+                                <!--FACEBOOK LINK AND IMAGE---------------------------------------------------------------------------->
+                                <li id="ContactMe">
+                                    <a href="https://www.facebook.com/reed.hampton.5" target="_blank">
+                                        <img src="~/StaticImages/Black_FaceBook_Logo.jpg" alt="Facebook" style="height:18px; width:18px;" />
+                                    </a>
+                                </li>
+                                <!--LINKEDIN LINK AND IMAGE---------------------------------------------------------------------------->
+
+                                <li>
+                                    <a href="https://www.linkedin.com/in/reedbhampton/" target="_blank">
+                                        <img src="~/StaticImages/In-Black-66px-TM.png" alt="LinkedIn" style="height:18px; width:18px;" />
+                                    </a>
+                                </li>
+
+                                <!--GITHUB LINK AND IMAGE---------------------------------------------------------------------------->
+
+                                <li>
+                                    <a href="https://github.com/reedhampton" target="_blank">
+                                        <img src="~/StaticImages/GitHub-Mark-64px.png" alt="GitHub" style="height:18px; width:18px;"/>
+                                    </a>
+                                </li>
+
+                                <!--EMAIL LINK AND IMAGE---------------------------------------------------------------------------->
+
+                                <li>
+                                    <a href="mailto:reed.hampton@gmail.com" target="_blank">
+                                        <img src="~/StaticImages/email_64x64.png" alt="Email" style="height:18px; width:18px;"/>
+                                    </a>
+                                </li>
+
                 </ul>
             </div>
         </div>
     </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
