--- a/ReedHampton/Views/Images/Albums.cshtml
+++ b/ReedHampton/Views/Images/Albums.cshtml
@@ -33,7 +33,6 @@
         }
 
         .column {
-            float: left;
             width: 30%;
         }
 
@@ -48,18 +47,17 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: #c0bfb9;
+            background-color: #f5eee1;
         }
 
         /* Modal Content */
         .modal-content {
             position: relative;
-            background-color: #fefefe;
+            background-color: #f5eee1;
             margin: auto;
             padding: 0;
-            width: 80%;
-            height:auto;
-            max-width: 850px;
+            width: 850px;
+            height:600px;
         }
 
         /* The Close Button */
@@ -124,9 +122,9 @@
 
         .caption-container {
             text-align: center;
-            background-color: white;
+            background-color: darkgrey;
             padding: 2px 16px;
-            color: #660000;
+            color: white;
             font-size: 30px;
             font-family:Garamond;
         }
@@ -141,8 +139,8 @@
             }
 
         .color img{
-            filter: grayscale(88%);
-            -webkit-filter: grayscale(88%);
+            filter: grayscale(75%);
+            -webkit-filter: grayscale(75%);
             -webkit-transition: all .7s ease;
             }
 
@@ -205,8 +203,8 @@
                     img_path = img_path.Remove(0, 2);
 
                     imagePath = @Request.ApplicationPath + img_path;
-                    thumbnailImage = "<div class=\"column color\"><img src=\"" + imagePath + "\" style=\"width:300px; height:300px; object-fit:cover; overflow: hidden;\" onclick=\"openModal();currentSlide(" + img_number + ")\" class=\"hover-shadow cursor\")></div>";
-                    expandedImage = "<div class=\"mySlides\"><img src=\"" + imagePath + "\" style=\"width:100%;\"><p class =\"caption-container\">" + imageCaption + "</p></div>";
+                    thumbnailImage = "<div class=\"column color\" style=\"display:inline-block;\"><img src=\"" + imagePath + "\" style=\"width:300px; height:300px; object-fit:cover; overflow: hidden;\" onclick=\"openModal();currentSlide(" + img_number + ")\" class=\"hover-shadow cursor\")></div>";
+                    expandedImage = "<div class=\"mySlides\"><img src=\"" + imagePath + "\" style=\"width:100%; max-height:575px;\"><p class =\"caption-container\">" + imageCaption + "</p></div>";
 
                     thumbnailHTML[count] = thumbnailImage;
                     expandedHTML[count] = expandedImage;
@@ -221,7 +219,7 @@
 
 <!-------------------------------------------------------THUMBNAILS------------------------------------------------------------------------------------------------->
 
-    <div class="row">
+    <div class="row" style="text-align:center;">
         @for (int i = 0; i < count; ++i)
         {
             if (thumbnailHTML[i] != null)
