Added the proper titles to each major view for the Tab Bars in browser. Deleted Bootsrap.min.css so that the main Bootstrp file would be used in the published version of the website.

--- a/ReedHampton/Views/AboutMe/Home.cshtml
+++ b/ReedHampton/Views/AboutMe/Home.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ReedHampton.Models.AboutMe>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "About Me";
 }
 
 <style>
@@ -75,8 +75,8 @@
 <body>
 
     <div class="jumbotron" id="darken" style="margin-top:60px;">
-        <h1 style="text-align:center;">Welcome!</h1>
-        <p class="lead" style="text-align:center;"><strong>Developer, Amateur Novelist, Greenhorn Photographer...</strong></p>
+        <h1 style="text-align:center; color:white;">Welcome!</h1>
+        <p class="lead" style="text-align:center; color:white;"><strong>Developer, Amateur Novelist, Greenhorn Photographer...</strong></p>
     </div> 
 
     @{
