--- a/ReedHampton/Views/Albums/AlbumGallery.cshtml
+++ b/ReedHampton/Views/Albums/AlbumGallery.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ReedHampton.Models.Album>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Album Gallery";
 }
 <style>
     body {
