--- a/ReedHampton/Views/ContactInformation/Index.cshtml
+++ b/ReedHampton/Views/ContactInformation/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ReedHampton.Models.ContactInformation>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Contact Me";
 }
 <style>
     body {
