--- a/ReedHampton/Views/DevelopmentProjects/Portfolio.cshtml
+++ b/ReedHampton/Views/DevelopmentProjects/Portfolio.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ReedHampton.Models.DevelopmentProject>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Dev Portfolio";
 }
 
     <style>
