--- a/ReedHampton/Views/Images/Albums.cshtml
+++ b/ReedHampton/Views/Images/Albums.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ReedHampton.Models.Image>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = ViewBag.albumName;
 }
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
