--- a/ReedHampton/Views/ProfessionalDocuments/DocumentPortfolio.cshtml
+++ b/ReedHampton/Views/ProfessionalDocuments/DocumentPortfolio.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ReedHampton.Models.ProfessionalDocuments>
 
 @{
-    ViewBag.Title = "DocumentPortfolio";
+    ViewBag.Title = "Doc Portfolio";
 }
 
 <style>
