Optimization chages in styling for Chrome on mobile, Safari on desktop, and Safari on Mobile. Slight coloring changes in bootstrap.css for the site as a whole.

--- a/ReedHampton/Content/bootstrap.css
+++ b/ReedHampton/Content/bootstrap.css
@@ -5261,6 +5261,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     .navbar-brand:hover,
     .navbar-brand:focus {
         text-decoration: none;
+        color:#660000;
     }
 
     .navbar-brand > img {
@@ -5674,7 +5675,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     .navbar-inverse .navbar-nav > .active > a:hover,
     .navbar-inverse .navbar-nav > .active > a:focus {
         color: #ffffff;
-        background-color: cyan;
+        background-color: #660000;
     }
 
     .navbar-inverse .navbar-nav > .disabled > a,
@@ -5690,7 +5691,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 
         .navbar-inverse .navbar-toggle:hover,
         .navbar-inverse .navbar-toggle:focus {
-            background-color: #e53c37;
+            background-color: #ffffff;
         }
 
         .navbar-inverse .navbar-toggle .icon-bar {
@@ -5699,23 +5700,23 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 
     .navbar-inverse .navbar-collapse,
     .navbar-inverse .navbar-form {
-        border-color: #e74944;
+        border-color: #ffffff;
     }
 
     .navbar-inverse .navbar-nav > .open > a,
     .navbar-inverse .navbar-nav > .open > a:hover,
     .navbar-inverse .navbar-nav > .open > a:focus {
-        background-color: #e74b47;
-        color: #ffffff;
+        background-color: #ffffff;
+        color: #660000;
     }
 
 @media (max-width: 767px) {
     .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
-        border-color: #e53c37;
+        border-color: #660000;
     }
 
     .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
-        background-color: #e53c37;
+        background-color: #660000;
     }
 
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
@@ -5725,14 +5726,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
         .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
         .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
             color: #ffffff;
-            background-color: #e74b47;
+            background-color: #660000;
         }
 
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: #ffffff;
-        background-color: #e74b47;
+        background-color: #660000;
     }
 
     .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
