--- a/ReedHampton/Views/AboutMe/Home.cshtml
+++ b/ReedHampton/Views/AboutMe/Home.cshtml
@@ -38,6 +38,9 @@
 
     #f1_container:hover #f1_card {
         transform: rotateY(180deg);
+        -moz-transform: rotateY(180deg);
+        -webkit-transform: rotateY(180deg);
+        -o-transform: rotateY(180deg);
         box-shadow: -5px 5px 5px #aaa;
     }
 
@@ -46,6 +49,7 @@
         width: 100%;
         height: 100%;
         backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
         background-color: #660000;
         display: block;
     }
@@ -53,6 +57,9 @@
         .face.back {
             display: block;
             transform: rotateY(180deg);
+            -moz-transform: rotateY(180deg);
+            -webkit-transform: rotateY(180deg);
+            -o-transform: rotateY(180deg);
             box-sizing: border-box;
             padding: 10px;
             color: white;
@@ -75,7 +82,7 @@
 <body>
 
     <div class="jumbotron" id="darken" style="margin-top:60px;">
-        <h1 style="text-align:center; color:white;">Welcome!</h1>
+        <h1 style="text-align:center; color:white;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">Welcome!</h1>
         <p class="lead" style="text-align:center; color:white;"><strong>Developer, Amateur Novelist, Greenhorn Photographer...</strong></p>
     </div> 
 
