--- a/ReedHampton/Views/Images/Albums.cshtml
+++ b/ReedHampton/Views/Images/Albums.cshtml
@@ -9,151 +9,198 @@
 <head>
     
     <style>
-        body {
-            background-color: #f5eee1;
-        }
+    body {
+        background-color: #f5eee1;
+    }
 
-        hr {
-            border-top: 0.5px solid #660000;
-        }
+    hr {
+        border-top: 0.5px solid #660000;
+    }
 
-        * {
-            box-sizing: border-box;
-        }
+    * {
+        box-sizing: border-box;
+    }
 
-        .row > .column {
-            padding: 0 8px;
-            padding-top: 20px;
-        }
+    .row > .column {
+        padding: 0 8px;
+        padding-top: 20px;
+    }
 
-        .row:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 
-        .column {
-            width: 30%;
-        }
+    .column {
+        width: 30%;
+    }
 
-        /* The Modal (background) */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            padding-top: 100px;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.8);
-        }
+    /* The Modal (background) */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 100px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
 
-        /* Modal Content */
-        .modal-content {
-            position: relative;
-            background-color: black;
-            margin: auto;
-            padding: 0;
-            width: 80%;
-            height: 80%;
-        }
+    /* Modal Content */
+    .modal-content {
+        position: relative;
+        background-color: black;
+        margin: auto;
+        padding: 0;
+        width: 80%;
+        height: 80%;
+    }
 
-        /* The Close Button */
-        .close {
+    /* The Close Button */
+    .close {
+        color: #660000;
+        position: absolute;
+        top: 100px;
+        right: 100px;
+        font-size: 48px;
+        font-weight: bold;
+        opacity:.9;
+    }
+
+        .close:hover,
+        .close:focus {
             color: #660000;
-            position: absolute;
-            top: 100px;
-            right: 100px;
-            font-size: 48px;
-            font-weight: bold;
-            opacity:.9;
-        }
-
-            .close:hover,
-            .close:focus {
-                color: #660000;
-                text-decoration: none;
-                cursor: pointer;
-            }
-
-        .mySlides {
-            display: none;
-            width: 100%;
-            height: 100%;
-        }
-
-        .cursor {
-            cursor: pointer
-        }
-
-        /* Next & previous buttons */
-        .prev,
-        .next {
+            text-decoration: none;
             cursor: pointer;
-            position: absolute;
-            top: 50%;
-            width: auto;
-            padding: 16px;
-            margin-top: -50px;
-            color: white;
-            font-weight: bold;
-            font-size: 20px;
-            transition: 0.6s ease;
-            border-radius: 0 3px 3px 0;
-            user-select: none;
-            -webkit-user-select: none;
         }
 
-        /* Position the "next button" to the right */
-        .next {
-            right: 0;
-            border-radius: 3px 0 0 3px;
+    .mySlides {
+        display: none;
+        width: 100%;
+        height: 100%;
+    }
+
+    .cursor {
+        cursor: pointer
+    }
+
+    /* Next & previous buttons */
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -50px;
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        -webkit-user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+
+        /* On hover, add a black background color with a little bit see-through */
+        .prev:hover,
+        .next:hover {
+            background-color: rgba(0, 0, 0, 0.7);
         }
 
-            /* On hover, add a black background color with a little bit see-through */
-            .prev:hover,
-            .next:hover {
-                background-color: rgba(0, 0, 0, 0.7);
+    img {
+        margin-bottom: -4px;
+    }
+
+    .caption-container {
+        position: absolute;
+        right: 0px;
+        bottom: -55px;
+        background-color: transparent;
+        color: white;
+        font-size: 30px;
+        font-family: Garamond;
+    }
+
+    .demo {
+        opacity: 0.6;
+    }
+
+        .active,
+        .demo:hover {
+            opacity: 1;
+        }
+
+    .color img{
+        filter: grayscale(75%);
+        -webkit-filter: grayscale(75%);
+        -webkit-transition: all .7s ease;
+        }
+
+    .color img:hover{
+        filter: grayscale(0%);
+        filter: gray;
+        -webkit-filter: grayscale(0%);
+        filter: none;
+        transition: 1s ease;
+        }
+
+        @@media screen and (max-width: 500px) {
+            .row > .column {
+                padding-top: 20px;
+                float: left;
+                margin-left: 12%;
             }
 
-        img {
-            margin-bottom: -4px;
-        }
-
-        .caption-container {
-            position: absolute;
-            right: 0px;
-            bottom: -55px;
-            background-color: transparent;
-            color: white;
-            font-size: 30px;
-            font-family: Garamond;
-        }
-
-        .demo {
-            opacity: 0.6;
-        }
-
-            .active,
-            .demo:hover {
-                opacity: 1;
+            .row:after {
+                content: "";
+                display: table;
+                clear: both;
             }
 
-        .color img{
-            filter: grayscale(75%);
-            -webkit-filter: grayscale(75%);
-            -webkit-transition: all .7s ease;
+            .column {
+                width: 60%;
+                float:left;
+                margin-left:12%;
             }
 
-        .color img:hover{
-            filter: grayscale(0%);
-            filter: gray;
-            -webkit-filter: grayscale(0%);
-            filter: none;
-            transition: 1s ease;
+            .caption-container {
+                position: absolute;
+                bottom:-14%;
+                left:0%;
+                background-color: transparent;
+                color: white;
+                font-size: 20px;
+                font-family: Garamond;
             }
+
+            .close {
+                color: #660000;
+                position:absolute;
+                right:3%;
+                top:14%;
+                font-size: 24px;
+                font-weight: bold;
+                opacity: .9;
+            }
+
+                .close:hover,
+                .close:focus {
+                    color: #660000;
+                    text-decoration: none;
+                    cursor: pointer;
+                }
+        }
     </style>
 </head>
 
