--- a/ReedHampton/Views/ProfessionalDocuments/DocumentPortfolio.cshtml
+++ b/ReedHampton/Views/ProfessionalDocuments/DocumentPortfolio.cshtml
@@ -37,13 +37,37 @@
         width: 25%;
     }
 
+    @@media screen and (max-width: 500px)
+    {
+        .row > .column {
+            padding-top: 20px;
+            padding-bottom: 80px;
+            margin-top: 40px;
+            margin-bottom: 40px;
+        }
+
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        .column {
+            width: 60%;
+            margin: 0 auto;
+        }
+
+    }
+
+
     #hoverBox {
         background-image: linear-gradient( rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35) ), url(../../StaticImages/DiagonalBlue.jpg);
         background-size: cover;
         border-radius: 25px;
+        -webkit-border-radius: 25px;
     }
     #hoverBox:hover h1 {
-        
+
     }
 
     .centered {
@@ -73,7 +97,8 @@
 <body>
 
     <div class="jumbotron" id="darken" style="background-size:cover; margin-top:60px;">
-        <h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:25px; padding-bottom:25px; color:white;">Document Portfolio</h1>
+        <h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:25px; padding-bottom:25px; color:white;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">
+        Document Portfolio</h1>
     </div>
     
     <hr />
